--- a/_site.yml
+++ b/_site.yml
@@ -8,6 +8,8 @@ navbar:
       href: ImportData.html
     - text: "DataFiltering"
       href: DataFiltering.html
+    - text: "DataAgregation"
+      href: DataAgregation.html
     - text: "DataFiltering Exercice"
       href: DataFiltering_Exercise.html
     - text: "About"
